The matrix calculator functionality is working.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(matrix_calculator C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(matrix_calculator mainmat.c)
+# Add all your source files to the executable
+add_executable(matrix_calculator mainmat.c mymat.c)
+
